# Novo

./: AlgoritmoQuantico3.py  AnaliseDeCredito200.R  AnaliseDesmatamento.R  AtomoLitio.py  Black-Scholes2.R  Black-Scholes2.py  BubbleSort.cpp  Calculadora_Cientifica.html  CambioDolarRealQ.py  CelulaFotovoltaica2.py  CurvaPrimo.py  DNAPoissonBoltzmann.py  DecaimentoProton.py  DemografiaJapao.py  EmissaoNeutrinosSol.py  Epidemia_Gripe.py  EquacaoHJB.py  EquacaoNavierStokes.py  ErupcaoSolar.py  FalenciaBanco.py  FoguetesV2.py  FormulaRamanujan.py  JogosDamasIA.py  JurosEstocasticos.py  JurosRedesNeurais.py  Kolmogorov-Arnold.py  MeotdoNewtonRapshon.py  MetodoLax.py  Metodo_NewtonRaphson.cpp  Metodo_numericoIntegral.cpp  Modelo-crescimento.py  Modelo-seriesTemporais.py  Modelo42.py  Modelo600.py  ModeloBolsaBR.py  ModeloCeuAzul.py  ModeloClimatico.cpp  ModeloClimatico400.py  ModeloClimatico500.py  ModeloCrescimentoPIB.py  (+100 more)
AnaliseGeneticaAutismo/: README.md  app.py  configuracao.py
BitcoinPreditor/: README.md  cli.py  config.py
BolsaBrasileira/: README.md  config.py  (+1 more)
pyquant_risco/: README.md  pyproject.toml
pyquant_risco/examples/: exemplo_simulacao.py
pyquant_risco/src/pyquant_risco/: __init__.py  cli.py  config.py  logging_utils.py
pyquant_risco/src/pyquant_risco/api/: __init__.py  server.py
pyquant_risco/src/pyquant_risco/data/: __init__.py  market_data.py
pyquant_risco/src/pyquant_risco/models/: __init__.py  deeplearning.py  sde.py
pyquant_risco/src/pyquant_risco/pipeline/: __init__.py  risk_engine.py
pyquant_risco/tests/: test_risk_engine.py  test_sde.py
(+206 files in other folders)
